--- a/E-Loan/appsettings.Development.json
+++ b/E-Loan/appsettings.Development.json
@@ -2,7 +2,7 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft": "Warning",
+      "Microsoft": "Warning",dcfds
       "Microsoft.Hosting.Lifetime": "Information"
     }
   }
