--- a/E-Loan/appsettings.Development.json
+++ b/E-Loan/appsettings.Development.json
@@ -3,7 +3,7 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",dcfds
-      "Microsoft.Hosting.Lifetime": "Information"dc
+      "Microsoft.Hosting.Lifetime": "Information"dcded
     }
   }
 }
